--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-; *; .; h; t; m; l;  ; l; i; n; g; u; i; s; t; -; d; e; t; e; c; t; a; b; l; e; =; f; a; l; s; e;
-; *; .; c; s; s;  ; l; i; n; g; u; i; s; t; -; d; e; t; e; c; t; a; b; l; e; =; f; a; l; s; e;
-; *; .; j; s;  ; l; i; n; g; u; i; s; t; -; d; e; t; e; c; t; a; b; l; e; =; t; r; u; e
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.js linguist-detectable=true
